# deravel-os

./: .gitignore  Cargo.toml  interfaces.drvli  linker.ld  run.sh
.cargo/: config.toml
apps/: Cargo.toml  build.rs
apps/hello/: Cargo.toml  build.rs
apps/ipc-a/: Cargo.toml
apps/ipc-b/: Cargo.toml
apps/ipc-c/: Cargo.toml
apps/shell/: Cargo.toml  build.rs
codegen/: Cargo.toml
codegen/src/: lib.rs  parse.rs
filesystems/tar/: Cargo.toml
interfaces/: Cargo.toml
interfaces/src/: lib.rs
kernel/: Cargo.toml  build.rs  kernel.ld
kernel-api/: Cargo.toml  build.rs  user.ld
kernel-api/src/: capability.rs  dispatch.rs  drvli.rs  framebuffer.rs  lib.rs  syscall.rs  user_ring_buffer.rs
kernel/src/: allocators.rs  arch.rs  capability.rs  device_tree.rs  drvli.rs  elf.rs  hart.rs  heap.rs  interrupt.rs  log.rs  main.rs  page.rs  pci.rs  plic.rs  process.rs  process_spawner.rs  ring_buffer.rs  sbi.rs  shared_memory.rs  sync.rs  uart.rs  util.rs  virtio.rs
kernel/src/pci/: capability.rs  config.rs
kernel/src/sbi/: ffi.rs
kernel/src/util/: volatile.rs
kernel/src/virtio/: blk.rs  gpu.rs  input.rs  net.rs  queue.rs  registers.rs  virtio_blk.rs  virtio_net.rs
kernel/src/virtio/gpu/: types.rs
kernel/src/virtio/input/: config.rs  types.rs
src/: log.rs  main.rs  net.rs  page.rs  sbi.rs  virtio.rs  virtio_net.rs
src/net/: arp.rs
src/sbi/: ffi.rs
src/virtio/: queue.rs  registers.rs  structures.rs  virtio_blk.rs  virtio_net.rs
src/virtio_net/: registers.rs  structures.rs
types/: Cargo.toml  build.rs
types/src/: abi.rs  actor.rs  align.rs  lib.rs  (+7 more)
(+13 files in other folders)
