[package]
name = "deravel-kernel-api"
version = "0.0.0"
edition = "2024"

[dependencies]
deravel-types = { path = "../types" }
log = "0.4"
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0", features = ["alloc"], default-features = false }

[build-dependencies]
deravel-codegen = { path = "../codegen" }
