[package]
name = "deravel-kernel"
version = "0.0.0"
edition = "2024"
default-run = "deravel-kernel"

[dependencies]
deravel-hello = { path = "../apps/hello", artifact = "bin" }
elf = { version = "0.8", default-features = false }
fdt = { version = "0.1", features = ["pretty-printing"] }
log = "0.4"
riscv = "0.16"
smoltcp = { version = "0.12", features = ["log", "medium-ethernet", "proto-ipv4", "socket-dns", "socket-udp"], default-features = false }
